App: Nicht-Image Buttons mit Farbverlauf
+Quadrate in RÜ

--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -89,7 +89,7 @@
 			<button id="SyncButton" class="topcoat-button center full" ontouchend="sync()">Aktualisieren</button>
 		</div> -->
 		<div >
-			<button id="AbmeldenButton" class="topcoat-button center full" ountouchend="abmelden()">Logout</button>
+			<button id="AbmeldenButton" class="topcoat-button center full" ontouchend="abmelden()">Logout</button>
 		</div> 
 		
 		</div>
