--- a/Studiduell_Prototyp/www/html/spielerSuchen.html
+++ b/Studiduell_Prototyp/www/html/spielerSuchen.html
@@ -25,23 +25,24 @@
 	</head>
 	<body>
 		<div class="content-padded">
-	<div id="suchTabelle_div">
-		<!-- S -->
-		<div id="iconsDiv">
-			<div class="leftColumn">
-				<input id="search_username_input" type="search" value="" placeholder="Benutzername" class="topcoat-search-input">
+			<div id="suchTabelle_div">
+			<!-- S -->
+			<div id="iconsDiv">
+				<div class="leftColumn">
+					<input id="search_username_input" type="search" value="" placeholder="Benutzername" class="topcoat-search-input">
+				</div>
+				<div class="rightColumn">
+					<img id="addImage" class="sucheButton" src="../images/Lupe.png" >
+				</div>
+				
 			</div>
-			<div class="rightColumn">
-				<img id="addImage" class="sucheButton" src="../images/lupe.png" >
-			</div>
-			
-		</div>
-			<!-- Ergebnisliste -->
-			<div id="ergebnislisteDiv" class="topcoat-list">
-				<h3 id="ergebnisliste_header"class="topcoat-list__header">Suchergebnis</h3>
-				<ul class="topcoat-list__container" id="ergebnislisteErweitern">
-				</ul>
-			</div>
+				<!-- Ergebnisliste -->
+				<div id="ergebnislisteDiv" class="topcoat-list">
+					<h3 id="ergebnisliste_header"class="topcoat-list__header">Suchergebnis</h3>
+					<ul class="topcoat-list__container" id="ergebnislisteErweitern">
+					</ul>
+				</div>
+			</div>	
 		</div>	
 	</body>
 </html>
