App: Präse Vorbereitung

--- a/Studiduell_Prototyp/www/html/spielerSuchen.html
+++ b/Studiduell_Prototyp/www/html/spielerSuchen.html
@@ -32,7 +32,7 @@
 					<input id="search_username_input" type="search" value="" placeholder="Benutzername" class="topcoat-search-input">
 				</div>
 				<div class="rightColumn">
-					<img id="addImage" class="sucheButton" src="../images/Lupe.png" >
+					<img id="addImage" class="sucheButton" src="../images/lupe.png" >
 				</div>
 				
 			</div>
