--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -1,49 +1,37 @@
+<!--
+	TODO
+	THIS IS A HACK!
+	TEMPORARILY DISABLED DOCTYPE DUE TO APPGYVER BUG.
+	REFER TO AN UPCOMING SOLUTION ON https://github.com/AppGyver/scanner/issues/35 .
+	
+	IDEALLY, DOCTYPE IS REACTIVATED AS SOON AS A SOLUTION IS AVAILABLE TO PREVENT
+	THE BROWSER FROM QUIRKS MODE.
+	
 <!DOCTYPE html>
+-->
 <html>
 	<head>
-	  <meta charset="utf8">
-	  <meta name="viewport" content="width=device-width">
-	  <title>My Steroids App</title>
+		<meta charset="utf8">
+		<meta name="viewport" content="width=device-width">
+		<title>My Steroids App</title>
 
 
-	  <link rel="stylesheet" href="../vendor/topcoat/css/topcoat-mobile-light.css" />
-	  <link rel="stylesheet" href="../css/application.css" />
-	  <link rel="stylesheet" href="../css/rundenuebersicht.css" />
+		<link rel="stylesheet" href="../vendor/topcoat/css/topcoat-mobile-light.css" />
+		<link rel="stylesheet" href="../css/application.css" />
+		<link rel="stylesheet" href="../css/rundenuebersicht.css" />
 		<link rel="stylesheet" href="../css/home.css" />
 
-	  <script src="../js/onerror.js"></script>
-	  <script src="../js/console.log.js"></script>
-	  
+		<script src="../js/onerror.js"></script>
+		<script src="../js/console.log.js"></script>
 
-	<!--<script type="text/javascript" charset="utf-8" src="/cordova.js"></script> 
-    <script type="text/javascript" charset="utf-8" src="/components/steroids-js/steroids.js"></script>
-    <script type="text/javascript" charset="utf-8"> </script> -->
-
-	<!--<script type="text/javascript" charset="utf-8" src="/cordova.js"></script> 
-    <script type="text/javascript" charset="utf-8" src="/components/steroids-js/steroids.js"></script>
-    <script type="text/javascript" charset="utf-8"> </script> -->
-
-	<!--<script type="text/javascript" charset="utf-8" src="/cordova.js"></script> 
-    <script type="text/javascript" charset="utf-8" src="/components/steroids-js/steroids.js"></script>
-    <script type="text/javascript" charset="utf-8"> </script> -->
-
-	<!--<script type="text/javascript" charset="utf-8" src="/cordova.js"></script> 
-    <script type="text/javascript" charset="utf-8" src="/components/steroids-js/steroids.js"></script>
-    <script type="text/javascript" charset="utf-8"> </script> -->
-
-	<!--<script type="text/javascript" charset="utf-8" src="/cordova.js"></script> 
-    <script type="text/javascript" charset="utf-8" src="/components/steroids-js/steroids.js"></script>
-    <script type="text/javascript" charset="utf-8"> </script> -->
-
-	<script src="../js/jquery-1.11.0.min.js"></script>
-	  <!-- cordova.js is served from localhost to ensure the correct version -->
-	  <script src="http://localhost/cordova.js"></script>
-	  <script src="../components/steroids-js/steroids.js"></script>
-	  <script src="/components/steroids-addons/index.js"></script>
-		<script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
+		<script src="../js/jquery-1.11.0.min.js"></script>
+		<!-- cordova.js is served from localhost to ensure the correct version -->
+		<script src="http://localhost/cordova.js"></script>
+		<script src="../components/steroids-js/steroids.js"></script>
+		<script src="../vendor/hammerjs/hammer.min.js"></script>
+		<script src="../vendor/hammerjs/jquery.hammer.min.js"></script>
 		<script src="../js/application.js"></script>
 		<script src="../js/homescreen.js"></script>
-			
 	</head>
 
 	<body>
