App: Added tap events for login screen. Forgotten??

--- a/Studiduell_Prototyp/www/html/login.html
+++ b/Studiduell_Prototyp/www/html/login.html
@@ -33,11 +33,11 @@
 	</head>
 	<body>
 		<h2 id="schrift">Bitte gib deinen Benutzernamen und das zugehörige Passwort ein, um dich einzuloggen!</h2>
-		<input id= "username_input" type="text" class="topcoat-text-input center full custom_input" placeholder="Benutzername" value=""> <br>
-		<input id= "password_input" type="password" class="topcoat-text-input center full custom_input" placeholder="Passwort" value=""> <br>
+		<input id= "username_input" type="text" class="topcoat-text-input center full custom_input" placeholder="Benutzername" value="">
+		<input id= "password_input" type="password" class="topcoat-text-input center full custom_input" placeholder="Passwort" value="">
 				
-		<button id="LoginButton" class="topcoat-button center full custom_button" >Login</button> <br>
-		<button id="RegisterButton" class="topcoat-button center full custom_button" >Registrieren</button> <br>
+		<button id="LoginButton" class="topcoat-button center full custom_button" >Login</button>
+		<button id="RegisterButton" class="topcoat-button center full custom_button" >Registrieren</button>
 		<!--<button id="TEST_HomeButton" class="topcoat-button" ontouchend="openHomeScreen();">TEST: Gehe zu Home</button> -->
 		
 	</body>
