--- a/Studiduell_Prototyp/www/html/register.html
+++ b/Studiduell_Prototyp/www/html/register.html
@@ -32,7 +32,7 @@
 	
 	</head>
 	<body>
-		<div id="Anweisung_div" class="center"><h2>Bitte gib deinen gew&uuml;nschten Benutzernamen und dein Passwort ein, um dich zu registrieren.</h2> </div>
+		<div id="Anweisung_div" class="center"><h2>Bitte gib deinen gewünschten Benutzernamen und dein Passwort ein, um dich zu registrieren.</h2> </div>
 		<input id= "username_input" type="text" class="topcoat-text-input custom_input" placeholder="Benutzername" value=""> <br>
 		<input id= "password_input" type="password" class="topcoat-text-input custom_input" placeholder="Passwort" value=""> <br>
 		
