--- a/Studiduell_Prototyp/www/html/neuesSpiel.html
+++ b/Studiduell_Prototyp/www/html/neuesSpiel.html
@@ -37,7 +37,7 @@
 		<div class="content-padded">
 			<!-- Spieler suchen -->
 			<button id="spielerSuchenButton" class="topcoat-icon-button custom_icon_button" >Spieler suchen</button>
-			<button id="beliebigerSpielerButton" class="topcoat-icon-button custom_icon_button" >Beliebiger Spieler</button>
+			<!--<button id="beliebigerSpielerButton" class="topcoat-icon-button custom_icon_button" >Beliebiger Spieler</button>-->
 			
 				<!-- Freundesliste -->
 			<div id="freundeslisteDiv" class="topcoat-list">
