App: OK Button in FragenScreen eingefügt

--- a/Studiduell_Prototyp/www/html/frage.html
+++ b/Studiduell_Prototyp/www/html/frage.html
@@ -49,11 +49,11 @@
 				<div id="antwort4Popup" class="popupDiv"></div>
 			</div>
 		</div>
-		<!-- wurde durch swiperight ersetzt!  
+		<!-- wurde durch swiperight ersetzt! --> 
 		<div class="center">
-			<button id="nextButton" class="topcoat-button--large" disabled>Weiter</button>
+			<button id="nextButton" class="topcoat-button--large" disabled>OK</button>
 		</div>
-		-->
+		
 		
 		<div id="timelineDiv"></div>
 	</body>
